--- a/SignIn/src/test/htmltest/index.css
+++ b/SignIn/src/test/htmltest/index.css
@@ -140,3 +140,19 @@ body {
     font-size: 20px;
     letter-spacing: 5px;
 }
+
+
+
+
+
+
+
+
+
+
+
+#leaveuser {
+    width: 850px;
+    margin: 0 auto;
+    margin-top: 30px;
+}
